tdf#114703 DOCX import: apply num defaults only to abstract nums

Numbering definitions have two levels: abstract ones and overrides. The
full definition is a merge of the two. Make sure that when defaults are
added to the numbering level properties, these are only added for
abstract ones, otherwise overriding e.g. the start value of a level will
also pull in other, unwanted default properties.

Change-Id: If0273ebc6b49476df17b09d636489a3bfb717334